2013-04-07  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* utils/command.cc (args_count): New.
	(execute_core): Use it.  Tidy.
	(Arguments::Arguments): Tidy.

2013-04-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/token.H: New.
	* syntax/token.cc: Likewise.
	* syntax/Makefile.am: Likewise.
	* Makefile.am (DIST_SUBDIRS): Add syntax.
	(oa_src_include_headers): Add Input.H, token.H.

2013-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/Makefile.am: New.
	* algebra/Makefile.in: Generate content from Makefile.am.

2013-04-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/Input.H: New.
	* include/defaults.H: Likewise.
	* include/iterator.H: Likewise.
	* include/structure.H: Likewise.
	* io/Input.cc: Likewise.
	* Makefile.am (DIST_SUBDIRS): Include io.
	(subdirs): Likewise.
	(oa_src_include_headers): New.
	(all-headers): New rule.
	(mostlyclean-local): Remove target include directory too.
	* gui/gui.pro.in: Update with new dependency.

2013-04-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gui/conversation.h (Question::leaveEvent): Remove.
	(Question::focusOutEvent): Likewise.
	* gui/conversation.cc: Remove corresponding definitions.

2013-04-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gui/conversation.cc (font_units): Rename from em_metrics.
	Adjust callers.
	(Answer::Answer): Use raised frame style.

2013-03-31  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* lib/sockio-c.c (get_float): Remove unused local variable val.
	* lib/pixmap.c (read_pixmap_file): Remove unused local variable status.
	* lib/openpty.c (makeNextPtyNames): Guard declaration by CPP macro.
	* lib/fnct_key.c (define_function_keys): Remove unused local
	variable saved_echo.
	* lib/XSpadFill.c (XInitSpadFill): Remove unused local variable
	maxDither.
	* graph/viewman/fun2D.c (funView2D): Remove declaration of unused
	local variable code.
	* graph/viewman/fun3D.c (funView3D): Likewise.
